removed ckeditor5 inline scrollbar styling issue

--- a/frontend/src/modules/scaffold/less/textArea.less
+++ b/frontend/src/modules/scaffold/less/textArea.less
@@ -36,15 +36,4 @@
   .ck-editor__editable_inline {
     min-height: 200px;
   }
-
-  .ck-editor__editable {
-    /* Set a fixed height for the editor container */
-    height: 300px;
-    /* Add scrollbars if the content exceeds the height */
-    overflow-y: auto;
-  }
-
-  .ck.ck-sticky-panel .ck-sticky-panel__content_sticky {
-      position: unset;
-  }
 }
